direction-2/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

@font-face{
  font-family: 'Hanson-Bold';
  src: url('type-fonts/Hanson-Bold.ttf') format('truetype');
}

:root{
    --heading-text: 'Orbitron', sans-serif;
    --body-text: "Roboto", system-ui, sans-serif;
    --blockquote-text: 'Space Mono';

    --spacing: 1rem;

    --green: #8ac65c;
    --orange:#e66465;
    --glass: rgba(236, 236, 236, 0.359);
}

html{scroll-behavior: smooth;}

/* ------------ layout ------------- */

body{background: black;}

header ol:first-child, nav ol{
    display: flex;
    flex-direction:row;
    justify-content: space-between;
    font-family: var(--body-text);
    font-size: 1.15rem;
    padding: var(--spacing);
}

h1, h2, h3, p, small, blockquote{
    padding-inline: var(--spacing);
}

h1{
    font-family: var(--heading-text);
    font-size: 3.2rem;
    font-weight: 600;
    line-height: 2.6rem;
    padding-block-start:4rem;
    padding-block-end: 2.6rem;
    text-wrap: wrap;
    text-transform: uppercase;
    background: linear-gradient(
        90deg,
        #e8f4c8,
        #c8e695,
        #8ac65c,
        #5aa43a,
        #8ac65c,
        #c8e695,
        #e8f4c8
    );

    background-size: 300% 100%;
    background-position: 0% 0%;

    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;

    animation: slide 4s linear infinite;
}

@keyframes slide {
    0% { background-position: 0% 0%; }
    100% { background-position: 100% 0%; }
}

h2{
    font-family: var(--heading-text);
    font-size: 1.2rem;
    font-weight: 600;
    line-height: 2.8rem;
    text-align: start;
    justify-content: center;
    color: white;
    padding-block: 0.5rem;
}

h3{
    font-family: var(--heading-text);
    font-size: 1.2rem;
    font-weight: 600;
    line-height: 2.4rem;
    padding-block: 0.5rem;
    background: var(--red);
    color: white;
}

p, small{
    font-family: var(--body-text);
    font-size: 1.15rem;
    line-height: 1.9rem;
    padding-block: var(--spacing);
}

.bold{
    font-family: var(--body-text);
    font-size: 1.15rem;
    line-height: 1.9rem;
    font-weight: 600;
}

.date-author{
    display: flex;
    flex-direction: column;
    padding: none;
}

blockquote {
    position: relative;
    margin-block: 4rem;
    padding: 2.5rem;
    padding-inline-end: 1rem;
    z-index: 1;
    font-family: var(--body-text);
    line-height: 2rem;
    font-size: 1.4rem;
}

blockquote p {
    margin: 0;
    padding-block-start: 2rem;
    padding-block-end: 4rem;
    font-family: var(--blockquote-text);
    font-size: 1.7rem;
    line-height: 2.2rem;
    font-weight: 500;
}

blockquote::before {
    content: "“";
    position: relative;
    left: -1%;
    top: 0;
    font-family: var(--blockquote-text);
    font-weight: 800;
    font-size: 3rem;
    line-height: 1;
    color: var(--green);
}

body a {
    text-decoration-line: underline;
    text-decoration-style: wavy;
    text-decoration-color: var(--green);
    text-decoration-thickness: 0.12em;
    text-underline-offset: 0.15em;
    transition: color 0.3s ease-in-out;
}

h3,
p,
small,
body a,
blockquote,
blockquote a{
    color: white;
}

section{
    padding-block: 1.4rem;
}

section:has(blockquote) {
    background-color: transparent;
}

/* ------------ nav ------------- */
.site-nav {
    padding-block: 0.5rem;
}

.site-nav .menu {
    display: flex;
    align-items: center;
    justify-content: start;
    gap: 2rem;
    list-style: none;
}

.site-nav a,
.has-submenu summary {
    font-family: var(--body-text);
    font-size: 1.2rem;
    font-weight: 400;
    text-decoration: none;
    color: white;
    background-color: black;
}

.site-nav a:hover { 
    text-decoration: underline;
    text-decoration-color: var(--green); 
}

/* ------------ dropdown ------------- */
.has-submenu details {
    position: relative;
}

.has-submenu summary {
    list-style: none;
    cursor: pointer;
}

.has-submenu summary::-webkit-details-marker { display: none; }

.has-submenu summary::after {
    content: "▾";
    margin-inline-start: .35rem;
    font-size: 1em;
}

.submenu {
    position: absolute;
    left: -1rem;
    top: 100%;
    transform: translateY(.5rem);
    list-style: none;
    margin: 0;
    padding-inline: .5rem;
    padding-block: 0.5rem;
    min-width: max(16rem, 24ch);
    display: none;
    z-index: 10;
}

.has-submenu details[open] .submenu { 
    display: block; 
}

.submenu li a {
    display: block;
    padding: .6rem 1rem;
    white-space: nowrap;
}

.submenu li a:hover {
    background: var(--orange);
    color: var(--green);
    text-decoration: none;
}

@media (hover: hover) and (pointer: fine) {
    .has-submenu:hover details[open] .submenu { display: block; }
    .has-submenu:hover details:not([open]) .submenu { display: block; }
}

.highlight{
    display: inline;
    background-color: #8ac65c;
    padding-inline: 0.1rem;
    color: black;
    box-decoration-break: clone;
    -webkit-box-decoration-break: clone;
}

/* ------------ slide ------------- */

.sliding-container {
    width: calc(100% + 300px);
    border-top: 1.5px solid white;
    border-bottom: 1.5px solid white;
    padding-block: 0.4rem;
    margin-inline: -1rem;
    margin-block-start: 6rem;
    margin-block-end: 0;
    white-space: nowrap;
    position: relative;
    transform: rotate(12deg);
    overflow: hidden; /* THIS is crucial */
}

.sliding-text {
    display: inline-block;
    white-space: nowrap;
    animation: slide-rtl 18s linear infinite;
    font-family: var(--heading-text);
    font-size: 1.2rem;
}

/* I wanted to make my sliding text an infinite loop but couldn't quite figure it out. I thought about repeating the text in class="sliding-text" but knew that it would be wrong semantically. Decided to make a duplicate of the text in CSS instead to create the infinite animation. */
.sliding-text::after {
    content: "vaporwave ✦ neon lighting ✦ bisexual lighting ✦ illusion of dimension ✦ cyberpunk ✦ vaporwave ✦ neon lighting ✦ bisexual lighting ✦ illusion of dimension ✦ cyberpunk ✦";
}

@keyframes slide-rtl {
    0%   { transform: translateX(0); }
    100% { transform: translateX(-50%); }
}

